[gd_scene load_steps=30 format=4 uid="uid://bdieog3kdgxqx"]

[ext_resource type="Script" path="res://scenes/dungeon.gd" id="1_hm42q"]
[ext_resource type="Texture2D" uid="uid://ck5akjsksj646" path="res://resources/gfx/test_map/tilesheet_complete.png" id="2_fva2q"]
[ext_resource type="PackedScene" uid="uid://06l21cx8uhd2" path="res://scenes/dungeoneer.tscn" id="3_8pr5p"]
[ext_resource type="AudioStream" uid="uid://dh31jr18adsud" path="res://resources/audio/tori.mp3" id="4_bunu8"]
[ext_resource type="Script" path="res://scenes/dungeon_beholder.gd" id="5_bbhue"]
[ext_resource type="Texture2D" uid="uid://cv511u6mkc0tu" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Layer 1/Brick_03-Layer_1_Center-256x256.png" id="5_pk8ji"]
[ext_resource type="Texture2D" uid="uid://w6qs5o1f70xq" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick_03-Layer_0_Center-512x512.png" id="6_3wrqu"]
[ext_resource type="Texture2D" uid="uid://qbqinkcctf0a" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Brick_03-Layer_biggest_ceiling-256x256_lit.png" id="6_6ridh"]
[ext_resource type="Texture2D" uid="uid://dbs3o1stavc8t" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Brick_03-Layer_0_Center-256x256.png" id="6_byybh"]
[ext_resource type="Texture2D" uid="uid://bg27a7ivxxxdm" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Layer 1/Brick_03-Layer_1_Bottom-256x64_transparent.png" id="6_x2p1m"]
[ext_resource type="Texture2D" uid="uid://bnndb36i7opiy" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Brick_03-Layer_biggest_floor-256x256_lit.png" id="7_a7r0k"]
[ext_resource type="Texture2D" uid="uid://buhvqrr0etro2" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Layer 1/Brick_03-Layer_1_Left-64x256_transparent.png" id="7_oth8a"]
[ext_resource type="Texture2D" uid="uid://cm7iggn4y77am" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Layer 1/Brick_03-Layer_1_Right-64x256_transparent.png" id="8_gaq5j"]
[ext_resource type="Texture2D" uid="uid://djsxbmdpl4ac5" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Brick_03-Layer_biggest_left_wall-256x256_lit.png" id="8_qeqaf"]
[ext_resource type="Texture2D" uid="uid://8xsobwfei3f2" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Layer 1/Brick_03-Layer_1_Top-256x64_transparent.png" id="9_32e20"]
[ext_resource type="Texture2D" uid="uid://dkkdfcoxdc0aa" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Brick_03-Layer_biggest_right_wall-256x256_lit.png" id="9_e5in4"]
[ext_resource type="Texture2D" uid="uid://cq4p0r85buamt" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Layer 2/Brick_03-Layer_2_Bottom-128x32_transparent.png" id="10_qwyep"]
[ext_resource type="Texture2D" uid="uid://dkvkgano46v4a" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Layer 2/Brick_03-Layer_2_Center-64x64.png" id="11_h2a0u"]
[ext_resource type="Texture2D" uid="uid://beh3tqelfue2k" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/left_center-256x256.png" id="12_061e6"]
[ext_resource type="Texture2D" uid="uid://l5d7bt8alcis" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Layer 2/Brick_03-Layer_2_Left-32x128_transparent.png" id="12_v0wpr"]
[ext_resource type="Texture2D" uid="uid://b8n5tdk3ly2sw" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/right_center-256x256.png" id="13_a8rq4"]
[ext_resource type="Texture2D" uid="uid://s4ydds2dpb8c" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Layer 2/Brick_03-Layer_2_Right-32x128_transparent.png" id="13_dnjpp"]
[ext_resource type="Texture2D" uid="uid://clib1uw15dty5" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Layer 2/Brick_03-Layer_2_Top-128x32_transparent.png" id="14_xftet"]
[ext_resource type="Texture2D" uid="uid://b3colvu5f0uvt" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Layer 1/right_center_64x128.png" id="19_b2t08"]
[ext_resource type="Texture2D" uid="uid://c6fbt3j3o3sna" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Layer 1/left_center_64x128.png" id="20_xvyci"]
[ext_resource type="Texture2D" uid="uid://bd6i44n2f2cjr" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Layer 2/left_center_32x64.png" id="26_eyhfs"]
[ext_resource type="Texture2D" uid="uid://cn3iyx7pttmfb" path="res://resources/gfx/SBS - Dungeon Crawler Pack/Brick 3/Layer 2/right_center_32x64.png" id="27_bav7m"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qqk3y"]
texture = ExtResource("2_fva2q")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
21:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
0:6/0 = 0
0:6/0/custom_data_0 = -1
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
16:9/0/custom_data_0 = 2
17:9/0 = 0
17:9/0/custom_data_0 = 1
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0

[sub_resource type="TileSet" id="TileSet_lb3ms"]
tile_size = Vector2i(64, 64)
custom_data_layer_0/name = "tile_type"
custom_data_layer_0/type = 2
sources/0 = SubResource("TileSetAtlasSource_qqk3y")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_hm42q")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAYAAAAAAAEAAAAAAAYAAAAAAAIAAAAAAAYAAAAAAAMAAAAAAAYAAAAAAAQAAAAAAAYAAAAAAAUAAAAAAAYAAAAAAAYAAAAAAAYAAAAAAAcAAAAAAAYAAAAAAAgAAAAAAAYAAAAAAAkAAAAAAAYAAAAAAAoAAAAQAAUAAAAAAAsAAAAQAAUAAAAAAAwAAAAQAAUAAAAAAA0AAAAQAAUAAAAAAA4AAAAAAAYAAAAAAA8AAAAAAAYAAAAAABAAAAAAAAYAAAABAAAAAAAAAAYAAAABAAIAAAAAAAYAAAABAAMAAAAAAAYAAAABAAQAAAAAAAYAAAABAAUAAAAAAAYAAAABAAYAAAAQAAUAAAABAAcAAAAAAAYAAAABAAgAAAAAAAYAAAABAAkAAAAQAAUAAAABAAoAAAAQAAUAAAABAAsAAAAQAAUAAAABAAwAAAAQAAUAAAABAA0AAAAAAAYAAAABAA4AAAAAAAYAAAABAA8AAAAAAAYAAAABABAAAAAAAAYAAAACAAAAAAAAAAYAAAACAAEAAAAAAAYAAAACAAIAAAAAAAYAAAACAAMAAAAQAAUAAAACAAQAAAAQAAUAAAACAAUAAAAQAAUAAAACAAYAAAAQAAUAAAACAAcAAAAQAAUAAAACAAgAAAAQAAUAAAACAAkAAAAQAAUAAAACAAoAAAAQAAUAAAACAAsAAAAQAAUAAAACAAwAAAAQAAUAAAACAA0AAAAAAAYAAAACAA4AAAAAAAYAAAACAA8AAAAAAAYAAAACABAAAAAAAAYAAAADAAAAAAAAAAYAAAADAAEAAAAAAAYAAAADAAIAAAAAAAYAAAADAAMAAAAQAAUAAAADAAUAAAAAAAYAAAADAAYAAAAQAAUAAAADAAcAAAAAAAYAAAADAAgAAAAAAAYAAAADAAkAAAAQAAUAAAADAAoAAAAQAAUAAAADAAsAAAAQAAUAAAADAAwAAAAQAAUAAAADAA0AAAAAAAYAAAADAA4AAAAAAAYAAAADAA8AAAAAAAYAAAADABAAAAAAAAYAAAAEAAAAAAAAAAYAAAAEAAEAAAAAAAYAAAAEAAIAAAAQAAUAAAAEAAMAAAAQAAUAAAAEAAQAAAAQAAUAAAAEAAUAAAAAAAYAAAAEAAYAAAAAAAYAAAAEAAcAAAAAAAYAAAAEAAgAAAAAAAYAAAAEAAkAAAAAAAYAAAAEAAoAAAAQAAUAAAAEAAsAAAAQAAUAAAAEAAwAAAAQAAUAAAAEAA0AAAAAAAYAAAAEAA4AAAAAAAYAAAAEAA8AAAAAAAYAAAAEABAAAAAAAAYAAAAFAAAAAAAAAAYAAAAFAAEAAAAQAAUAAAAFAAIAAAAQAAUAAAAFAAMAAAAQAAUAAAAFAAQAAAAQAAUAAAAFAAUAAAAQAAUAAAAFAAYAAAAAAAYAAAAFAAcAAAAAAAYAAAAFAAgAAAAAAAYAAAAFAAkAAAAAAAYAAAAFAAoAAAAAAAYAAAAFAAsAAAAQAAUAAAAFAAwAAAAQAAUAAAAFAA0AAAAAAAYAAAAFAA4AAAAAAAYAAAAFAA8AAAAAAAYAAAAFABAAAAAAAAYAAAAGAAAAAAAQAAUAAAAGAAEAAAAQAAUAAAAGAAIAAAAQAAUAAAAGAAMAAAAQAAUAAAAGAAQAAAAQAAUAAAAGAAUAAAAQAAUAAAAGAAYAAAAQAAUAAAAGAAcAAAAAAAYAAAAGAAgAAAAAAAYAAAAGAAkAAAAAAAYAAAAGAAoAAAAAAAYAAAAGAAsAAAAAAAYAAAAGAAwAAAAQAAUAAAAGAA0AAAAAAAYAAAAGAA4AAAAAAAYAAAAGAA8AAAAAAAYAAAAGABAAAAAAAAYAAAAHAAAAAAAQAAUAAAAHAAEAAAAAAAYAAAAHAAIAAAAAAAYAAAAHAAMAAAAAAAYAAAAHAAQAAAAAAAYAAAAHAAUAAAAAAAYAAAAHAAYAAAAAAAYAAAAHAAcAAAAAAAYAAAAHAAgAAAAAAAYAAAAHAAkAAAAAAAYAAAAHAAoAAAAAAAYAAAAHAAsAAAAAAAYAAAAHAAwAAAAAAAYAAAAHAA0AAAAAAAYAAAAHAA4AAAAAAAYAAAAHAA8AAAAAAAYAAAAHABAAAAAAAAYAAAAIAAAAAAAQAAUAAAAIAAEAAAAAAAYAAAAIAAIAAAAAAAYAAAAIAAMAAAAAAAYAAAAIAAQAAAAAAAYAAAAIAAUAAAAAAAYAAAAIAAYAAAAAAAYAAAAIAAcAAAAAAAYAAAAIAAgAAAAAAAYAAAAIAAkAAAAAAAYAAAAIAAoAAAAAAAYAAAAIAAsAAAAAAAYAAAAIAAwAAAAAAAYAAAAIAA0AAAAAAAYAAAAIAA4AAAAAAAYAAAAIAA8AAAAAAAYAAAAIABAAAAAAAAYAAAAJAAAAAAAQAAUAAAAJAAEAAAAQAAUAAAAJAAIAAAAQAAUAAAAJAAMAAAAAAAYAAAAJAAQAAAAAAAYAAAAJAAUAAAAAAAYAAAAJAAYAAAAAAAYAAAAJAAcAAAAAAAYAAAAJAAgAAAAAAAYAAAAJAAkAAAAAAAYAAAAJAAoAAAAAAAYAAAAJAAsAAAAAAAYAAAAJAAwAAAAAAAYAAAAJAA0AAAAAAAYAAAAJAA4AAAAAAAYAAAAJAA8AAAAAAAYAAAAJABAAAAAAAAYAAAAKAAAAAAAQAAUAAAAKAAEAAAAAAAYAAAAKAAIAAAAQAAUAAAAKAAMAAAAAAAYAAAAKAAQAAAAAAAYAAAAKAAUAAAAAAAYAAAAKAAYAAAAAAAYAAAAKAAcAAAAAAAYAAAAKAAgAAAAAAAYAAAAKAAkAAAAAAAYAAAAKAAoAAAAAAAYAAAAKAAsAAAAAAAYAAAAKAAwAAAAAAAYAAAAKAA0AAAAAAAYAAAAKAA4AAAAAAAYAAAAKAA8AAAAAAAYAAAAKABAAAAAAAAYAAAALAAAAAAAAAAYAAAALAAEAAAAAAAYAAAALAAIAAAAQAAUAAAALAAMAAAAQAAUAAAALAAQAAAAAAAYAAAALAAUAAAAAAAYAAAALAAYAAAAAAAYAAAALAAcAAAAAAAYAAAALAAgAAAAAAAYAAAALAAkAAAAAAAYAAAALAAoAAAAAAAYAAAALAAsAAAAAAAYAAAALAAwAAAAAAAYAAAALAA0AAAAAAAYAAAALAA4AAAAAAAYAAAALAA8AAAAAAAYAAAALABAAAAAAAAYAAAAMAAAAAAAAAAYAAAAMAAEAAAAQAAUAAAAMAAIAAAAQAAUAAAAMAAMAAAAAAAYAAAAMAAQAAAAAAAYAAAAMAAUAAAAAAAYAAAAMAAYAAAAAAAYAAAAMAAcAAAAAAAYAAAAMAAgAAAAAAAYAAAAMAAkAAAAAAAYAAAAMAAoAAAAAAAYAAAAMAAsAAAAAAAYAAAAMAAwAAAAAAAYAAAAMAA0AAAAAAAYAAAAMAA4AAAAAAAYAAAAMAA8AAAAAAAYAAAAMABAAAAAAAAYAAAANAAAAAAAAAAYAAAANAAEAAAAAAAYAAAANAAIAAAAQAAUAAAANAAMAAAAQAAUAAAANAAQAAAAAAAYAAAANAAUAAAAAAAYAAAANAAYAAAAAAAYAAAANAAcAAAAAAAYAAAANAAgAAAAAAAYAAAANAAkAAAAAAAYAAAANAAoAAAAAAAYAAAANAAsAAAAAAAYAAAANAAwAAAAAAAYAAAANAA0AAAAAAAYAAAANAA4AAAAAAAYAAAANAA8AAAAAAAYAAAANABAAAAAAAAYAAAAOAAAAAAAAAAYAAAAOAAEAAAAQAAUAAAAOAAIAAAAQAAUAAAAOAAMAAAAAAAYAAAAOAAQAAAAAAAYAAAAOAAUAAAAAAAYAAAAOAAYAAAAAAAYAAAAOAAcAAAAAAAYAAAAOAAgAAAAAAAYAAAAOAAkAAAAAAAYAAAAOAAoAAAAAAAYAAAAOAAsAAAAAAAYAAAAOAAwAAAAAAAYAAAAOAA0AAAAAAAYAAAAOAA4AAAAAAAYAAAAOAA8AAAAAAAYAAAAOABAAAAAAAAYAAAAPAAAAAAAAAAYAAAAPAAEAAAAAAAYAAAAPAAIAAAAQAAUAAAAPAAMAAAAAAAYAAAAPAAQAAAAAAAYAAAAPAAUAAAAAAAYAAAAPAAYAAAAAAAYAAAAPAAcAAAAAAAYAAAAPAAgAAAAAAAYAAAAPAAkAAAAAAAYAAAAPAAoAAAAAAAYAAAAPAAsAAAAAAAYAAAAPAAwAAAAAAAYAAAAPAA0AAAAAAAYAAAAPAA4AAAAAAAYAAAAPAA8AAAAAAAYAAAAPABAAAAAAAAYAAAAQAAAAAAAAAAYAAAAQAAEAAAAAAAYAAAAQAAIAAAAAAAYAAAAQAAMAAAAAAAYAAAAQAAQAAAAAAAYAAAAQAAUAAAAAAAYAAAAQAAYAAAAAAAYAAAAQAAcAAAAAAAYAAAAQAAgAAAAAAAYAAAAQAAkAAAAAAAYAAAAQAAoAAAAAAAYAAAAQAAsAAAAAAAYAAAAQAAwAAAAAAAYAAAAQAA0AAAAAAAYAAAAQAA4AAAAAAAYAAAAQAA8AAAAAAAYAAAAQABAAAAAAAAYAAAARAAAAAAAAAAYAAAARAAEAAAAAAAYAAAARAAIAAAAAAAYAAAARAAMAAAAAAAYAAAARAAQAAAAAAAYAAAARAAUAAAAAAAYAAAARAAYAAAAAAAYAAAARAAcAAAAAAAYAAAARAAgAAAAAAAYAAAARAAkAAAAAAAYAAAARAAoAAAAAAAYAAAARAAsAAAAAAAYAAAARAAwAAAAAAAYAAAARAA0AAAAAAAYAAAARAA4AAAAAAAYAAAARAA8AAAAAAAYAAAARABAAAAAAAAYAAAASAAAAAAAAAAYAAAASAAEAAAAAAAYAAAASAAIAAAAAAAYAAAASAAMAAAAAAAYAAAASAAQAAAAAAAYAAAASAAUAAAAAAAYAAAASAAYAAAAAAAYAAAASAAcAAAAAAAYAAAASAAgAAAAAAAYAAAASAAkAAAAAAAYAAAASAAoAAAAAAAYAAAASAAsAAAAAAAYAAAASAAwAAAAAAAYAAAASAA0AAAAAAAYAAAASAA4AAAAAAAYAAAASAA8AAAAAAAYAAAASABAAAAAAAAYAAAATAAAAAAAAAAYAAAATAAEAAAAAAAYAAAATAAIAAAAAAAYAAAATAAMAAAAAAAYAAAATAAQAAAAAAAYAAAATAAUAAAAAAAYAAAATAAYAAAAAAAYAAAATAAcAAAAAAAYAAAATAAgAAAAAAAYAAAATAAkAAAAAAAYAAAATAAoAAAAAAAYAAAATAAsAAAAAAAYAAAATAAwAAAAAAAYAAAATAA0AAAAAAAYAAAATAA4AAAAAAAYAAAATAA8AAAAAAAYAAAATABAAAAAAAAYAAAAUAAAAAAAAAAYAAAAUAAEAAAAAAAYAAAAUAAIAAAAAAAYAAAAUAAMAAAAAAAYAAAAUAAQAAAAAAAYAAAAUAAUAAAAAAAYAAAAUAAYAAAAAAAYAAAAUAAcAAAAAAAYAAAAUAAgAAAAAAAYAAAAUAAkAAAAAAAYAAAAUAAoAAAAAAAYAAAAUAAsAAAAAAAYAAAAUAAwAAAAAAAYAAAAUAA0AAAAAAAYAAAAUAA4AAAAAAAYAAAAUAA8AAAAAAAYAAAAUABAAAAAAAAYAAAAVAAAAAAAAAAYAAAAVAAEAAAAAAAYAAAAVAAIAAAAAAAYAAAAVAAMAAAAAAAYAAAAVAAQAAAAAAAYAAAAVAAUAAAAAAAYAAAAVAAYAAAAAAAYAAAAVAAcAAAAAAAYAAAAVAAgAAAAAAAYAAAAVAAkAAAAAAAYAAAAVAAoAAAAAAAYAAAAVAAsAAAAAAAYAAAAVAAwAAAAAAAYAAAAVAA0AAAAAAAYAAAAVAA4AAAAAAAYAAAAVAA8AAAAAAAYAAAAVABAAAAAAAAYAAAAWAAAAAAAAAAYAAAAWAAEAAAAAAAYAAAAWAAIAAAAAAAYAAAAWAAMAAAAAAAYAAAAWAAQAAAAAAAYAAAAWAAUAAAAAAAYAAAAWAAYAAAAAAAYAAAAWAAcAAAAAAAYAAAAWAAgAAAAAAAYAAAAWAAkAAAAAAAYAAAAWAAoAAAAAAAYAAAAWAAsAAAAAAAYAAAAWAAwAAAAAAAYAAAAWAA0AAAAAAAYAAAAWAA4AAAAAAAYAAAAWAA8AAAAAAAYAAAAWABAAAAAAAAYAAAAXAAAAAAAAAAYAAAAXAAEAAAAAAAYAAAAXAAIAAAAAAAYAAAAXAAMAAAAAAAYAAAAXAAQAAAAAAAYAAAAXAAUAAAAAAAYAAAAXAAYAAAAAAAYAAAAXAAcAAAAAAAYAAAAXAAgAAAAAAAYAAAAXAAkAAAAAAAYAAAAXAAoAAAAAAAYAAAAXAAsAAAAAAAYAAAAXAAwAAAAAAAYAAAAXAA0AAAAAAAYAAAAXAA4AAAAAAAYAAAAXAA8AAAAAAAYAAAAXABAAAAAAAAYAAAAYAAAAAAAAAAYAAAAYAAEAAAAAAAYAAAAYAAIAAAAAAAYAAAAYAAMAAAAAAAYAAAAYAAQAAAAAAAYAAAAYAAUAAAAAAAYAAAAYAAYAAAAAAAYAAAAYAAcAAAAAAAYAAAAYAAgAAAAAAAYAAAAYAAkAAAAAAAYAAAAYAAoAAAAAAAYAAAAYAAsAAAAAAAYAAAAYAAwAAAAAAAYAAAAYAA0AAAAAAAYAAAAYAA4AAAAAAAYAAAAYAA8AAAAAAAYAAAAYABAAAAAAAAYAAAAZAAAAAAAAAAYAAAAZAAEAAAAAAAYAAAAZAAIAAAAAAAYAAAAZAAMAAAAAAAYAAAAZAAQAAAAAAAYAAAAZAAUAAAAAAAYAAAAZAAYAAAAAAAYAAAAZAAcAAAAAAAYAAAAZAAgAAAAAAAYAAAAZAAkAAAAAAAYAAAAZAAoAAAAAAAYAAAAZAAsAAAAAAAYAAAAZAAwAAAAAAAYAAAAZAA0AAAAAAAYAAAAZAA4AAAAAAAYAAAAZAA8AAAAAAAYAAAAZABAAAAAAAAYAAAAaAAAAAAAAAAYAAAAaAAEAAAAAAAYAAAAaAAIAAAAAAAYAAAAaAAMAAAAAAAYAAAAaAAQAAAAAAAYAAAAaAAUAAAAAAAYAAAAaAAYAAAAAAAYAAAAaAAcAAAAAAAYAAAAaAAgAAAAAAAYAAAAaAAkAAAAAAAYAAAAaAAoAAAAAAAYAAAAaAAsAAAAAAAYAAAAaAAwAAAAAAAYAAAAaAA0AAAAAAAYAAAAaAA4AAAAAAAYAAAAaAA8AAAAAAAYAAAAaABAAAAAAAAYAAAAbAAAAAAAAAAYAAAAbAAEAAAAAAAYAAAAbAAIAAAAAAAYAAAAbAAMAAAAAAAYAAAAbAAQAAAAAAAYAAAAbAAUAAAAAAAYAAAAbAAYAAAAAAAYAAAAbAAcAAAAAAAYAAAAbAAgAAAAAAAYAAAAbAAkAAAAAAAYAAAAbAAoAAAAAAAYAAAAbAAsAAAAAAAYAAAAbAAwAAAAAAAYAAAAbAA0AAAAAAAYAAAAbAA4AAAAAAAYAAAAbAA8AAAAAAAYAAAAbABAAAAAAAAYAAAAcAAAAAAAAAAYAAAAcAAEAAAAAAAYAAAAcAAIAAAAAAAYAAAAcAAMAAAAAAAYAAAAcAAQAAAAAAAYAAAAcAAUAAAAAAAYAAAAcAAYAAAAAAAYAAAAcAAcAAAAAAAYAAAAcAAgAAAAAAAYAAAAcAAkAAAAAAAYAAAAcAAoAAAAAAAYAAAAcAAsAAAAAAAYAAAAcAAwAAAAAAAYAAAAcAA0AAAAAAAYAAAAcAA4AAAAAAAYAAAAcAA8AAAAAAAYAAAAcABAAAAAAAAYAAAAdAAAAAAAAAAYAAAAdAAEAAAAAAAYAAAAdAAIAAAAAAAYAAAAdAAMAAAAAAAYAAAAdAAQAAAAAAAYAAAAdAAUAAAAAAAYAAAAdAAYAAAAAAAYAAAAdAAcAAAAAAAYAAAAdAAgAAAAAAAYAAAAdAAkAAAAAAAYAAAAdAAoAAAAAAAYAAAAdAAsAAAAAAAYAAAAdAAwAAAAAAAYAAAAdAA0AAAAAAAYAAAAdAA4AAAAAAAYAAAAdAA8AAAAAAAYAAAAdABAAAAAAAAYAAAABAAEAAAAAAAYAAAADAAQAAAAAAAYAAAAGAP//AAAAAAYAAAAAAP//AAAAAAYAAAABAP//AAAAAAYAAAACAP//AAAAAAYAAAADAP//AAAAAAYAAAAEAP//AAAAAAYAAAAFAP//AAAAAAYAAAAHAP//AAAAAAYAAAAIAP//AAAAAAYAAAAJAP//AAAAAAYAAAAKAP//AAAAAAYAAAALAP//AAAAAAYAAAAMAP//AAAAAAYAAAANAP//AAAAAAYAAAAOAP//AAAAAAYAAAAPAP//AAAAAAYAAAARAP//AAAAAAYAAAASAP//AAAAAAYAAAAQAP//AAAAAAYAAAATAP//AAAAAAYAAAAUAP//AAAAAAYAAAAVAP//AAAAAAYAAAAWAP//AAAAAAYAAAAXAP//AAAAAAYAAAAYAP//AAAAAAYAAAAZAP//AAAAAAYAAAAaAP//AAAAAAYAAAAbAP//AAAAAAYAAAAcAP//AAAAAAYAAAAdAP//AAAAAAYAAAAAAP7/AAAAAAYAAAABAP7/AAAAAAYAAAACAP7/AAAAAAYAAAADAP7/AAAAAAYAAAAEAP7/AAAAAAYAAAAFAP7/AAAAAAYAAAAGAP7/AAAAAAYAAAAHAP7/AAAAAAYAAAAIAP7/AAAAAAYAAAAJAP7/AAAAAAYAAAAKAP7/AAAAAAYAAAALAP7/AAAAAAYAAAAMAP7/AAAAAAYAAAANAP7/AAAAAAYAAAAOAP7/AAAAAAYAAAAPAP7/AAAAAAYAAAAQAP7/AAAAAAYAAAARAP7/AAAAAAYAAAASAP7/AAAAAAYAAAATAP7/AAAAAAYAAAAUAP7/AAAAAAYAAAAVAP7/AAAAAAYAAAAWAP7/AAAAAAYAAAAXAP7/AAAAAAYAAAAYAP7/AAAAAAYAAAAZAP7/AAAAAAYAAAAaAP7/AAAAAAYAAAAbAP7/AAAAAAYAAAAcAP7/AAAAAAYAAAAdAP7/AAAAAAYAAAAdAP3/AAAAAAYAAAAcAP3/AAAAAAYAAAAbAP3/AAAAAAYAAAAaAP3/AAAAAAYAAAAZAP3/AAAAAAYAAAAYAP3/AAAAAAYAAAAXAP3/AAAAAAYAAAAWAP3/AAAAAAYAAAAVAP3/AAAAAAYAAAAUAP3/AAAAAAYAAAATAP3/AAAAAAYAAAASAP3/AAAAAAYAAAARAP3/AAAAAAYAAAAQAP3/AAAAAAYAAAAPAP3/AAAAAAYAAAAOAP3/AAAAAAYAAAANAP3/AAAAAAYAAAAMAP3/AAAAAAYAAAALAP3/AAAAAAYAAAAKAP3/AAAAAAYAAAAJAP3/AAAAAAYAAAAIAP3/AAAAAAYAAAAHAP3/AAAAAAYAAAAGAP3/AAAAAAYAAAAFAP3/AAAAAAYAAAAEAP3/AAAAAAYAAAADAP3/AAAAAAYAAAACAP3/AAAAAAYAAAABAP3/AAAAAAYAAAAAAP3/AAAAAAYAAAD///3/AAAAAAYAAAD///7/AAAAAAYAAAD/////AAAAAAYAAAD//wAAAAAAAAYAAAD//wEAAAAAAAYAAAD//wIAAAAAAAYAAAD//wMAAAAAAAYAAAD//wQAAAAAAAYAAAD//wUAAAAAAAYAAAD//wYAAAAAAAYAAAD//wcAAAAAAAYAAAD//wgAAAAAAAYAAAD//wkAAAAAAAYAAAD//woAAAAAAAYAAAD//wsAAAAQAAUAAAD//wwAAAAQAAUAAAD//w0AAAAAAAYAAAD//w4AAAAAAAYAAAD//w8AAAAAAAYAAAD//xAAAAAAAAYAAAD///z/AAAAAAYAAAAAAPz/AAAAAAYAAAABAPz/AAAAAAYAAAACAPz/AAAAAAYAAAADAPz/AAAAAAYAAAAEAPz/AAAAAAYAAAAFAPz/AAAAAAYAAAAGAPz/AAAAAAYAAAAHAPz/AAAAAAYAAAAIAPz/AAAAAAYAAAAJAPz/AAAAAAYAAAAKAPz/AAAAAAYAAAALAPz/AAAAAAYAAAAMAPz/AAAAAAYAAAANAPz/AAAAAAYAAAAOAPz/AAAAAAYAAAAPAPz/AAAAAAYAAAAQAPz/AAAAAAYAAAARAPz/AAAAAAYAAAASAPz/AAAAAAYAAAATAPz/AAAAAAYAAAAUAPz/AAAAAAYAAAAVAPz/AAAAAAYAAAAWAPz/AAAAAAYAAAAXAPz/AAAAAAYAAAAYAPz/AAAAAAYAAAAZAPz/AAAAAAYAAAAaAPz/AAAAAAYAAAAbAPz/AAAAAAYAAAAcAPz/AAAAAAYAAAAdAPz/AAAAAAYAAAD+/xAAAAAAAAYAAAD+/w8AAAAAAAYAAAD+/w4AAAAAAAYAAAD+/w0AAAAQAAUAAAD+/wwAAAAQAAUAAAD+/wsAAAAAAAYAAAD+/woAAAAAAAYAAAD+/wkAAAAAAAYAAAD+/wgAAAAAAAYAAAD+/wcAAAAAAAYAAAD+/wYAAAAAAAYAAAD+/wUAAAAAAAYAAAD+/wQAAAAAAAYAAAD+/wMAAAAAAAYAAAD+/wIAAAAAAAYAAAD+/wEAAAAAAAYAAAD+/wAAAAAAAAYAAAD+////AAAAAAYAAAD+//7/AAAAAAYAAAD+//3/AAAAAAYAAAD+//z/AAAAAAYAAAD9/wgAAAAAAAYAAAD9/wcAAAAAAAYAAAD9/wYAAAAAAAYAAAD9/wUAAAAAAAYAAAD9/wQAAAAAAAYAAAD9/wMAAAAAAAYAAAD8/wMAAAAAAAYAAAD9/wIAAAAAAAYAAAD9/wEAAAAAAAYAAAD8/wEAAAAAAAYAAAD9//z/AAAAAAYAAAD8//z/AAAAAAYAAAD8//3/AAAAAAYAAAD8//7/AAAAAAYAAAD8////AAAAAAYAAAD8/wAAAAAAAAYAAAD8/wIAAAAAAAYAAAD8/wQAAAAAAAYAAAD8/wUAAAAAAAYAAAD8/wYAAAAAAAYAAAD8/wcAAAAAAAYAAAD8/wgAAAAAAAYAAAD8/wkAAAAAAAYAAAD8/woAAAAAAAYAAAD8/wsAAAAAAAYAAAD9/xAAAAAAAAYAAAD8/xAAAAAAAAYAAAD9/w8AAAAAAAYAAAD8/w8AAAAAAAYAAAD8/w4AAAAAAAYAAAD9/w4AAAAAAAYAAAD8/w0AAAAAAAYAAAD9/w0AAAAAAAYAAAD8/wwAAAAAAAYAAAD9/wwAAAAAAAYAAAD9/wsAAAAAAAYAAAD9/woAAAAAAAYAAAD9/wkAAAAAAAYAAAD9/wAAAAAAAAYAAAD9////AAAAAAYAAAD9//7/AAAAAAYAAAD9//3/AAAAAAYAAAA=")
tile_set = SubResource("TileSet_lb3ms")

[node name="dungeoneer" parent="." instance=ExtResource("3_8pr5p")]
position = Vector2(224, 224)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_bunu8")
volume_db = 12.0
autoplay = true

[node name="Dungeon Beholder" type="Node2D" parent="."]
position = Vector2(448, 320)
script = ExtResource("5_bbhue")

[node name="Layer0" type="Node2D" parent="Dungeon Beholder"]

[node name="center" type="Sprite2D" parent="Dungeon Beholder/Layer0"]
z_index = 7
position = Vector2(480, 256)
texture = ExtResource("6_3wrqu")

[node name="Layer1" type="Node2D" parent="Dungeon Beholder"]

[node name="ceiling" type="Sprite2D" parent="Dungeon Beholder/Layer1"]
z_index = 6
position = Vector2(480, 64)
texture = ExtResource("6_6ridh")

[node name="floor" type="Sprite2D" parent="Dungeon Beholder/Layer1"]
z_index = 6
position = Vector2(480, 448)
texture = ExtResource("7_a7r0k")

[node name="left" type="Sprite2D" parent="Dungeon Beholder/Layer1"]
z_index = 6
position = Vector2(288, 256)
texture = ExtResource("8_qeqaf")

[node name="right" type="Sprite2D" parent="Dungeon Beholder/Layer1"]
z_index = 6
position = Vector2(672, 256)
texture = ExtResource("9_e5in4")

[node name="center" type="Sprite2D" parent="Dungeon Beholder/Layer1"]
z_index = 5
position = Vector2(480, 256)
texture = ExtResource("6_byybh")

[node name="right_front" type="Sprite2D" parent="Dungeon Beholder/Layer1"]
z_index = 5
position = Vector2(672, 256)
texture = ExtResource("12_061e6")

[node name="left_front" type="Sprite2D" parent="Dungeon Beholder/Layer1"]
z_index = 5
position = Vector2(288, 256)
texture = ExtResource("13_a8rq4")

[node name="Layer2" type="Node2D" parent="Dungeon Beholder"]

[node name="center" type="Sprite2D" parent="Dungeon Beholder/Layer2"]
z_index = 3
position = Vector2(480, 256)
texture = ExtResource("5_pk8ji")

[node name="floor" type="Sprite2D" parent="Dungeon Beholder/Layer2"]
z_index = 4
position = Vector2(480, 352)
texture = ExtResource("6_x2p1m")

[node name="left" type="Sprite2D" parent="Dungeon Beholder/Layer2"]
z_index = 4
position = Vector2(384, 256)
texture = ExtResource("7_oth8a")

[node name="right" type="Sprite2D" parent="Dungeon Beholder/Layer2"]
z_index = 4
position = Vector2(576, 256)
texture = ExtResource("8_gaq5j")

[node name="ceiling" type="Sprite2D" parent="Dungeon Beholder/Layer2"]
z_index = 4
position = Vector2(480, 160)
texture = ExtResource("9_32e20")

[node name="left_front_1" type="Sprite2D" parent="Dungeon Beholder/Layer2"]
z_index = 3
position = Vector2(352, 256)
texture = ExtResource("5_pk8ji")

[node name="left_front_2" type="Sprite2D" parent="Dungeon Beholder/Layer2"]
z_index = 3
position = Vector2(256, 256)
texture = ExtResource("19_b2t08")

[node name="right_front_1" type="Sprite2D" parent="Dungeon Beholder/Layer2"]
z_index = 3
position = Vector2(608, 256)
texture = ExtResource("5_pk8ji")

[node name="right_front_2" type="Sprite2D" parent="Dungeon Beholder/Layer2"]
z_index = 3
position = Vector2(704, 256)
texture = ExtResource("20_xvyci")

[node name="Layer3" type="Node2D" parent="Dungeon Beholder"]

[node name="floor" type="Sprite2D" parent="Dungeon Beholder/Layer3"]
z_index = 2
position = Vector2(480, 304)
texture = ExtResource("10_qwyep")

[node name="center" type="Sprite2D" parent="Dungeon Beholder/Layer3"]
z_index = 1
position = Vector2(480, 256)
texture = ExtResource("11_h2a0u")

[node name="left" type="Sprite2D" parent="Dungeon Beholder/Layer3"]
z_index = 2
position = Vector2(432, 256)
texture = ExtResource("12_v0wpr")

[node name="right" type="Sprite2D" parent="Dungeon Beholder/Layer3"]
z_index = 2
position = Vector2(528, 256)
texture = ExtResource("13_dnjpp")

[node name="ceiling" type="Sprite2D" parent="Dungeon Beholder/Layer3"]
z_index = 2
position = Vector2(480, 208)
texture = ExtResource("14_xftet")

[node name="left_front_1" type="Sprite2D" parent="Dungeon Beholder/Layer3"]
z_index = 1
position = Vector2(416, 256)
texture = ExtResource("11_h2a0u")

[node name="right_front_1" type="Sprite2D" parent="Dungeon Beholder/Layer3"]
z_index = 1
position = Vector2(544, 256)
texture = ExtResource("11_h2a0u")

[node name="left_front_2" type="Sprite2D" parent="Dungeon Beholder/Layer3"]
z_index = 1
position = Vector2(352, 256)
texture = ExtResource("11_h2a0u")

[node name="right_front_2" type="Sprite2D" parent="Dungeon Beholder/Layer3"]
z_index = 1
position = Vector2(608, 256)
texture = ExtResource("11_h2a0u")

[node name="left_front_3" type="Sprite2D" parent="Dungeon Beholder/Layer3"]
z_index = 1
position = Vector2(672, 256)
texture = ExtResource("11_h2a0u")

[node name="right_front_3" type="Sprite2D" parent="Dungeon Beholder/Layer3"]
z_index = 1
position = Vector2(288, 256)
texture = ExtResource("11_h2a0u")

[node name="right_front_4" type="Sprite2D" parent="Dungeon Beholder/Layer3"]
z_index = 1
position = Vector2(720, 256)
texture = ExtResource("26_eyhfs")

[node name="left_front_4" type="Sprite2D" parent="Dungeon Beholder/Layer3"]
z_index = 1
position = Vector2(240, 256)
texture = ExtResource("27_bav7m")

[connection signal="moving" from="dungeoneer" to="Dungeon Beholder" method="_on_dungeoneer_moving"]
